@@ -7,44 +7,50 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class PostService {
 
-    private  final PostRepository postRepository;
+    private final PostRepository postRepository;
 
     public PostDto createPost(PostDto dto) {
         Post post = Post.builder()
-                .board(dto.getBoard())
                 .title(dto.getTitle())
                 .content(dto.getContent())
-                .images(dto.getImages())
-                .tag(dto.getTag())
+                .imgUrl(dto.getImgUrl()) // 수정
+                .category(dto.getCategory())
+                .views(dto.getViews())
+                .commentsCount(dto.getCommentsCount())
+                .likeCount(dto.getLikeCount())
                 .build();
         Post saved = postRepository.save(post);
 
-        return new PostDto(
-                saved.getId(),
-                saved.getBoard(),
-                saved.getTitle(),
-                saved.getContent(),
-                saved.getImages(),
-                saved.getTag()
-        );
+        return PostDto.builder()
+                .id(saved.getId())
+                .title(saved.getTitle())
+                .content(saved.getContent())
+                .imgUrl(saved.getImgUrl()) // 수정
+                .category(saved.getCategory())
+                .views(saved.getViews())
+                .commentsCount(saved.getCommentsCount())
+                .likeCount(saved.getLikeCount())
+                .build();
     }
 
     public List<PostDto> getAllPosts() {
         return postRepository.findAll().stream()
-                        .map(post -> new PostDto(
-                                post.getId(),
-                                post.getBoard(),
-                                post.getTitle(),
-                                post.getContent(),
-                                post.getImages(),
-                                post.getTag()
-                        )).toList();
+                .map(post -> PostDto.builder()
+                        .id(post.getId())
+                        .title(post.getTitle())
+                        .content(post.getContent())
+                        .imgUrl(post.getImgUrl()) // 수정
+                        .category(post.getCategory())
+                        .views(post.getViews())
+                        .commentsCount(post.getCommentsCount())
+                        .likeCount(post.getLikeCount())
+                        .build())
+                .collect(Collectors.toList());
     }
-
-
 }
